[project]
name = "taskplannerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "jsonschema>=4.24.0",
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
